# legacy

./: Dockerfile  Dockerfile2  README.md
BASEDD/: .cproject  .project
BASEDD/bin32x64/: tacet.x  tacop.x  tacts.x  tada2.x  tagen.x  tami2.x  tanom.x  tapat.x  tases.x  tasrv.x  tasts.x  tatdp.x  taweb.x
BASEDD/bin64/: .nfsD394  taces.x  tacts.x  taeqa.x  tami2.x  tanet.x  taneu.x  tanom.x  tapur.x  tases.x  tasrv.x  tasts.x  tatdp.x  taweb.x
BASEDD/binx/: tacop.x  tagen.x  taneu.x  tanom.x  tases.x  tases.xx
BASEDD/binx64/: tacet.x  tacop.x  tacts.x  taeqa.x  tagen.x  tami2.x  tanet.x  taneu.x  tanom.x  tapur.x  tases.x  tasrv.x  tasts.x  tatdp.x  taweb.x
BASEDD/doc/: interfaces  rs_install_parms.CI  rs_install_parms.DM  rs_install_parms.DN  rs_setup_db_parms.CFG_CI  rs_setup_db_parms.CFG_DM  rs_setup_db_parms.CFG_DN  rs_setup_db_parms.EXP_CI  rs_setup_db_parms.EXP_DM  rs_setup_db_parms.EXP_DN  rs_setup_db_parms.HIS_CI
BASEDD/inc/: XZAG.h  aces_dir.h  aces_evt.h  acet_dir.h  acet_evt.h  acli_EA_AS_F.h  acli_XZEA_XZAS_FU.h  acli_acl.h  acli_dir.h  acli_eqt.h  acli_hcl.h  acli_mcl.h  acli_scl.h  acli_tcl.h  acli_xzac03_cb.h  acli_xzac62_cb.h  acli_xzac66_cb.h  acli_xzac67_cb.h  acli_xzac_cb.h  acli_xzae102.h  acli_xzag05_cb.h  acli_xzag06_cb.h  (+197 more)
EQUEXT/: .cproject  .project
EQUEXT/wsrc/tewsr/src/: Makefile  Makefile.am  Makefile.in  constants.h  error.h  minGlue.h  minIni.c  minIni.h  option.c  option.h  stub.c  stub.h  tewsr.c  tewsr.h  util.c  util.h
EQUEXT/wsrc/tewsr/src/CVS/: Entries  Repository
GESIHM/: .cproject  .project  GESIHM.build
SAIDEC/: .cproject  .project
SUPERV/: .cproject  .project
XDMICG/: .cproject  .project  XDMICG.build
rabbitmq_src/: commonRabbitmqNew.c  commonRabbitmqNew.h  test_rabbitCons.c  test_rabbitPub.c
(+7516 files in other folders)
